bpo-32277: Fix exception raised from chmod(..., follow_symlinks=False) (GH-4797) (#4869)

(cherry picked from commit 233ef249cc5c18d796fb581747179c5e062b4083)